--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,161 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
+  <body class="index-page">
+    <header>
+      <nav class="site-nav">
+        <ul class="site-nav__list  site-nav__list--open">
+          <li class="site-nav__item"><a>Главная</a></li>
+          <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
+          <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
+          <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+        <!--  TODO тут не понял требования. В макете кнопка закрыть отдельно от гамбургера, -->
+        <!--    а в ТЗ говорится что гамбургер заменяется на крестик -->
+        <span class="site-nav__close-button">Закрыть меню сайта</span>
+        <span class="site-nav__toggler  site-nav__toggler--open">Открыть/Закрыть меню сайта</span>
 
+        <span class="site-logo">
+          <a><img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)"></a>
+        </span>
+      </nav>
+
+      <div class="site-banner  site-banner--big">
+        <!-- TODO пока не понятно как делать баннер -->
+        <img class="site-banner__content" src="" alt="???">
+      </div>
+    </header>
+
+    <main>
+      <section class="advantage  advantage--primary">
+        <div class="container">
+          <h2>Настоящий городок</h2>
+
+          <span class="advantage__number">№1</span>
+
+          <p class="advantage__desc">
+            Седона не аттракцион для туристов, там течет своя жизнь
+          </p>
+        </div>
+
+        <div class="advantage__photo">
+          <img src="https://via.placeholder.com/320x260"
+               alt="На фото изображен сельский городок во все его сельском великолемии. Деревянные дома, флаги всех цветов и ни единой живой души..."
+          >
+        </div>
+
+        <div class="container">
+          <div class="advantage__benefits  small-city-benefits">
+            <h3 class="visually-hidden">Преимущества посещения маленького городка</h3>
+            <ul>
+              <li class="small-city-benefits__item  small-city-benefits__item--housing">
+                <div class="small-city-benefits__item-title">Жилье</div>
+                <div class="small-city-benefits__item-desc">
+                  Рекомендуем пожить в настоящем мотеле, все как в кино!
+                </div>
+              </li>
+
+              <li class="small-city-benefits__item  small-city-benefits__item--souvenir">
+                <div class="small-city-benefits__item-title">Сувениры</div>
+                <div class="small-city-benefits__item-desc">
+                  Не только китайского, но и местного производства!
+                </div>
+              </li>
+
+              <li class="small-city-benefits__item  small-city-benefits__item--food">
+                <div class="small-city-benefits__item-title">Еда</div>
+                <div class="small-city-benefits__item-desc">
+                  Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="advantage  advantage--primary">
+        <div class="container">
+          <h2>Там есть мост дьявола</h2>
+
+          <span class="advantage__number">№2</span>
+
+          <p class="advantage__desc">
+            Да, по нему можно пройти! Если вы осмелитесь, конечно
+          </p>
+        </div>
+
+        <div class="advantage__photo">
+          <img src="https://via.placeholder.com/320x260"
+               alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью"
+          >
+        </div>
+      </section>
+
+      <section class="advantage">
+        <div class="container">
+          <h2>Небольшая площадь</h2>
+
+          <span class="advantage__number">№3</span>
+
+          <p class="advantage__desc">
+            Все интересные места находятся очень близко
+          </p>
+        </div>
+      </section>
+
+      <section class="advantage">
+        <div class="container">
+          <h2>Красивая дорога</h2>
+
+          <span class="advantage__number">№4</span>
+
+          <p class="advantage__desc">
+            Ехать в седону из лас-вегаса совсем НЕ СКУЧНО!
+          </p>
+        </div>
+      </section>
+
+      <section class="advantage">
+        <div class="container">
+          <h2>Мало туристов</h2>
+
+          <span class="advantage__number">№5</span>
+
+          <p class="advantage__desc">
+            Большинство едет в гранд каньон и толпится там
+          </p>
+        </div>
+      </section>
+
+      <section class="find-apartment">
+        <!-- TODO -->
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="container">
+        <div class="page-footer__hashtag">
+          <a href="https://twitter.com/hashtag/visitSEDONA" target="_blank">#visitSEDONA</a>
+        </div>
+
+        <ul class="page-footer__social-link  social-links">
+          <li class="social-links__item  social-links__item--twitter">
+            <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
+          </li>
+          <li class="social-links__item  social-links__item--facebook">
+            <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
+          </li>
+          <li class="social-links__item  social-links__item--youtube">
+            <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
+          </li>
+        </ul>
+
+        <div class="page-footer__credits">
+          Разработано
+          <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
