--- a/source/form.html
+++ b/source/form.html
@@ -2,43 +2,49 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
     <title>HTML Academy: Седона. Форма обратной связи</title>
+    <meta name="keywords" content="TODO seo">
+    <meta name="description" content="TODO seo">
   </head>
   <body class="form-page">
     <header>
-      <nav class="site-nav">
-        <ul class="site-nav__list  site-nav__list--open">
+      <nav class="site-nav  site-nav--open">
+        <ul class="site-nav__list">
           <li class="site-nav__item"><a href="index.html">Главная</a></li>
-          <li class="site-nav__item"><a>Фото и видео</a></li>
-          <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
+          <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
+          <li class="site-nav__item"><a>Форма Отзыва</a></li>
           <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
         </ul>
 
-        <!--  TODO тут не понял требования. В макете кнопка закрыть отдельно от гамбургера, -->
-        <!--    а в ТЗ говорится что гамбургер заменяется на крестик -->
-        <span class="site-nav__close-button">Закрыть меню сайта</span>
-        <span class="site-nav__toggler  site-nav__toggler--open">Открыть/Закрыть меню сайта</span>
+        <button type="button" class="site-nav__toggler">
+          Открыть/Закрыть меню сайта
+        </button>
 
-        <span class="site-logo">
-          <a href="index.html"><img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)"></a>
-        </span>
+        <a class="site-logo" href="index.html">
+          <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
+        </a>
       </nav>
 
-      <div class="site-banner  site-banner--small">
-        <!-- TODO пока не понятно как делать баннер -->
-        <img class="site-banner__content" src="" alt="???">
+      <div class="site-banner-small">
+        <img src="https://via.placeholder.com/320x160"
+          class="site-banner-small__content"
+          alt="Welcome to the gorgeous Sedona!">
       </div>
     </header>
 
     <main>
+      <h1 class="visually-hidden">Седона Форма отзыва</h1>
+
       <!-- TODO -->
     </main>
 
     <footer class="page-footer">
       <div class="container">
         <div class="page-footer__hashtag">
-          #visitSEDONA
+          <a href="index.html">#visitSEDONA</a>
         </div>
+
         <div class="page-footer__social-link  social-links">
           <ul>
             <li class="social-links__item  social-links__item--twitter">
