добавил обертки div.container сразу внутри body

--- a/source/form.html
+++ b/source/form.html
@@ -8,60 +8,62 @@
     <meta name="description" content="TODO seo">
   </head>
   <body class="form-page">
-    <header>
-      <nav class="site-nav  site-nav--open">
-        <ul class="site-nav__list">
-          <li class="site-nav__item"><a href="index.html">Главная</a></li>
-          <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
-          <li class="site-nav__item"><a>Форма Отзыва</a></li>
-          <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
-        </ul>
+    <div class="container">
+      <header>
+        <nav class="site-nav  site-nav--open">
+          <ul class="site-nav__list">
+            <li class="site-nav__item"><a href="index.html">Главная</a></li>
+            <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-nav__item"><a>Форма Отзыва</a></li>
+            <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
+          </ul>
 
-        <button type="button" class="site-nav__toggler">
-          Открыть/Закрыть меню сайта
-        </button>
+          <button type="button" class="site-nav__toggler">
+            Открыть/Закрыть меню сайта
+          </button>
 
-        <a class="site-logo" href="index.html">
-          <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
-        </a>
-      </nav>
+          <a class="site-logo" href="index.html">
+            <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
+          </a>
+        </nav>
 
-      <div class="site-banner-small">
-        <img src="https://via.placeholder.com/320x160"
-          class="site-banner-small__content"
-          alt="Welcome to the gorgeous Sedona!">
-      </div>
-    </header>
+        <div class="site-banner-small">
+          <img src="https://via.placeholder.com/320x160"
+            class="site-banner-small__content"
+            alt="Welcome to the gorgeous Sedona!">
+        </div>
+      </header>
 
-    <main>
-      <h1 class="visually-hidden">Седона Форма отзыва</h1>
+      <main>
+        <h1 class="visually-hidden">Седона Форма отзыва</h1>
 
-      <!-- TODO -->
-    </main>
+        <!-- TODO -->
+      </main>
 
-    <footer class="page-footer">
-      <div class="page-footer__hashtag">
-        <a href="index.html">#visitSEDONA</a>
-      </div>
+      <footer class="page-footer">
+        <div class="page-footer__hashtag">
+          <a href="index.html">#visitSEDONA</a>
+        </div>
 
-      <div class="page-footer__social-link  social-links">
-        <ul>
-          <li class="social-links__item  social-links__item--twitter">
-            <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
-          </li>
-          <li class="social-links__item  social-links__item--facebook">
-            <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
-          </li>
-          <li class="social-links__item  social-links__item--youtube">
-            <a href="https://www.youtube.com/watch?v=HU22peKtyfY">Youtube</a>
-          </li>
-        </ul>
-      </div>
+        <div class="page-footer__social-link  social-links">
+          <ul>
+            <li class="social-links__item  social-links__item--twitter">
+              <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
+            </li>
+            <li class="social-links__item  social-links__item--facebook">
+              <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
+            </li>
+            <li class="social-links__item  social-links__item--youtube">
+              <a href="https://www.youtube.com/watch?v=HU22peKtyfY">Youtube</a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="page-footer__credits">
-        Разработано
-        <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </footer>
+        <div class="page-footer__credits">
+          Разработано
+          <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
