--- a/source/index.html
+++ b/source/index.html
@@ -8,157 +8,159 @@
     <meta name="description" content="TODO seo">
   </head>
   <body class="index-page">
-    <header>
-      <nav class="site-nav  site-nav--open">
-        <ul class="site-nav__list">
-          <li class="site-nav__item"><a>Главная</a></li>
-          <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
-          <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
-          <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
+    <div class="container">
+      <header>
+        <nav class="site-nav  site-nav--open">
+          <ul class="site-nav__list">
+            <li class="site-nav__item"><a>Главная</a></li>
+            <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
+            <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
+          </ul>
+
+          <button type="button" class="site-nav__toggler">
+            Открыть/Закрыть меню сайта
+          </button>
+
+          <a class="site-logo">
+            <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
+          </a>
+        </nav>
+
+        <div class="site-banner-big">
+          <img src="https://via.placeholder.com/320x389"
+            class="site-banner-big__content"
+            alt="Welcome to the gorgeous Sedona! Because the Grand Canyon Sucks">
+        </div>
+      </header>
+
+      <main>
+        <section class="index-page-intro">
+          <h1 class="index-page-intro__title">
+            СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!
+          </h1>
+
+          <p class="index-page-intro__desc">
+            Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+          </p>
+        </section>
+
+        <section class="advantage  advantage--primary">
+          <h2>Настоящий городок</h2>
+
+          <span class="advantage__number">№1</span>
+
+          <p class="advantage__desc">
+            Седона не аттракцион для туристов, там течет своя жизнь
+          </p>
+
+          <div class="advantage__photo">
+            <img src="https://via.placeholder.com/320x260"
+              alt="На фото изображен сельский городок во все его сельском великолемии. Деревянные дома, флаги всех цветов и ни единой живой души..."
+            >
+          </div>
+
+          <div class="advantage__benefits  small-city-benefits">
+            <h3 class="visually-hidden">Преимущества посещения маленького городка</h3>
+
+            <ul>
+              <li class="small-city-benefits__item  small-city-benefits__item--housing">
+                <b class="small-city-benefits__item-title">Жилье</b>
+                <p class="small-city-benefits__item-desc">
+                  Рекомендуем пожить в настоящем мотеле, все как в кино!
+                </p>
+              </li>
+
+              <li class="small-city-benefits__item  small-city-benefits__item--souvenir">
+                <b class="small-city-benefits__item-title">Сувениры</b>
+                <p class="small-city-benefits__item-desc">
+                  Не только китайского, но и местного производства!
+                </p>
+              </li>
+
+              <li class="small-city-benefits__item  small-city-benefits__item--food">
+                <b class="small-city-benefits__item-title">Еда</b>
+                <p class="small-city-benefits__item-desc">
+                  Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="advantage  advantage--primary">
+          <h2>Там есть мост дьявола</h2>
+
+          <span class="advantage__number">№2</span>
+
+          <p class="advantage__desc">
+            Да, по нему можно пройти! Если вы осмелитесь, конечно
+          </p>
+
+          <div class="advantage__photo">
+            <img src="https://via.placeholder.com/320x260"
+              alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью"
+            >
+          </div>
+        </section>
+
+        <section class="advantage">
+          <h2>Небольшая площадь</h2>
+
+          <span class="advantage__number">№3</span>
+
+          <p class="advantage__desc">
+            Все интересные места находятся очень близко
+          </p>
+        </section>
+
+        <section class="advantage">
+          <h2>Красивая дорога</h2>
+
+          <span class="advantage__number">№4</span>
+
+          <p class="advantage__desc">
+            Ехать в седону из лас-вегаса совсем НЕ СКУЧНО!
+          </p>
+        </section>
+
+        <section class="advantage">
+          <h2>Мало туристов</h2>
+
+          <span class="advantage__number">№5</span>
+
+          <p class="advantage__desc">
+            Большинство едет в гранд каньон и толпится там
+          </p>
+        </section>
+
+        <section class="find-apartment">
+          <!-- TODO -->
+        </section>
+      </main>
+
+      <footer class="page-footer">
+        <div class="page-footer__hashtag">
+          <a>#visitSEDONA</a>
+        </div>
+
+        <ul class="page-footer__social-link  social-links">
+          <li class="social-links__item  social-links__item--twitter">
+            <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
+          </li>
+          <li class="social-links__item  social-links__item--facebook">
+            <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
+          </li>
+          <li class="social-links__item  social-links__item--youtube">
+            <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
+          </li>
         </ul>
 
-        <button type="button" class="site-nav__toggler">
-          Открыть/Закрыть меню сайта
-        </button>
-
-        <a class="site-logo">
-          <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
-        </a>
-      </nav>
-
-      <div class="site-banner-big">
-        <img src="https://via.placeholder.com/320x389"
-          class="site-banner-big__content"
-          alt="Welcome to the gorgeous Sedona! Because the Grand Canyon Sucks">
-      </div>
-    </header>
-
-    <main>
-      <section class="index-page-intro">
-        <h1 class="index-page-intro__title">
-          СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!
-        </h1>
-
-        <p class="index-page-intro__desc">
-          Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-        </p>
-      </section>
-
-      <section class="advantage  advantage--primary">
-        <h2>Настоящий городок</h2>
-
-        <span class="advantage__number">№1</span>
-
-        <p class="advantage__desc">
-          Седона не аттракцион для туристов, там течет своя жизнь
-        </p>
-
-        <div class="advantage__photo">
-          <img src="https://via.placeholder.com/320x260"
-            alt="На фото изображен сельский городок во все его сельском великолемии. Деревянные дома, флаги всех цветов и ни единой живой души..."
-          >
+        <div class="page-footer__credits">
+          Разработано
+          <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
         </div>
-
-        <div class="advantage__benefits  small-city-benefits">
-          <h3 class="visually-hidden">Преимущества посещения маленького городка</h3>
-
-          <ul>
-            <li class="small-city-benefits__item  small-city-benefits__item--housing">
-              <b class="small-city-benefits__item-title">Жилье</b>
-              <p class="small-city-benefits__item-desc">
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
-              </p>
-            </li>
-
-            <li class="small-city-benefits__item  small-city-benefits__item--souvenir">
-              <b class="small-city-benefits__item-title">Сувениры</b>
-              <p class="small-city-benefits__item-desc">
-                Не только китайского, но и местного производства!
-              </p>
-            </li>
-
-            <li class="small-city-benefits__item  small-city-benefits__item--food">
-              <b class="small-city-benefits__item-title">Еда</b>
-              <p class="small-city-benefits__item-desc">
-                Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="advantage  advantage--primary">
-        <h2>Там есть мост дьявола</h2>
-
-        <span class="advantage__number">№2</span>
-
-        <p class="advantage__desc">
-          Да, по нему можно пройти! Если вы осмелитесь, конечно
-        </p>
-
-        <div class="advantage__photo">
-          <img src="https://via.placeholder.com/320x260"
-            alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью"
-          >
-        </div>
-      </section>
-
-      <section class="advantage">
-        <h2>Небольшая площадь</h2>
-
-        <span class="advantage__number">№3</span>
-
-        <p class="advantage__desc">
-          Все интересные места находятся очень близко
-        </p>
-      </section>
-
-      <section class="advantage">
-        <h2>Красивая дорога</h2>
-
-        <span class="advantage__number">№4</span>
-
-        <p class="advantage__desc">
-          Ехать в седону из лас-вегаса совсем НЕ СКУЧНО!
-        </p>
-      </section>
-
-      <section class="advantage">
-        <h2>Мало туристов</h2>
-
-        <span class="advantage__number">№5</span>
-
-        <p class="advantage__desc">
-          Большинство едет в гранд каньон и толпится там
-        </p>
-      </section>
-
-      <section class="find-apartment">
-        <!-- TODO -->
-      </section>
-    </main>
-
-    <footer class="page-footer">
-      <div class="page-footer__hashtag">
-        <a>#visitSEDONA</a>
-      </div>
-
-      <ul class="page-footer__social-link  social-links">
-        <li class="social-links__item  social-links__item--twitter">
-          <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
-        </li>
-        <li class="social-links__item  social-links__item--facebook">
-          <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
-        </li>
-        <li class="social-links__item  social-links__item--youtube">
-          <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
-        </li>
-      </ul>
-
-      <div class="page-footer__credits">
-        Разработано
-        <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
