--- a/source/index.html
+++ b/source/index.html
@@ -134,8 +134,20 @@
           </p>
         </section>
 
-        <section class="find-apartment">
-          <!-- TODO -->
+        <section class="find-apartment-suggestion">
+          <p class="find-apartment-suggestion__title">
+            Заинтересовались?
+          </p>
+
+          <p class="find-apartment-suggestion__text">
+            Укажите предполагаемые даты поездки,
+            и мы покажем вам лучшие предложения гостиниц в седоне
+          </p>
+
+          <a class="find-apartment-suggestion__link" href="#">Найти гостиницу</a>
+        </section>
+
+        <section class="sedona-map">
         </section>
       </main>
 
