--- a/source/photo.html
+++ b/source/photo.html
@@ -114,8 +114,17 @@
           </ul>
         </section>
 
-        <section class="video-presentation">
-          <!-- TODO -->
+        <section class="promo-video">
+          <h2 class="visually-hidden">
+            (TODO SEO) Сенсационное видео про Седону, котиков и лучшие бургеры в мире! Бесплатно.
+          </h2>
+          <p class="promo-video__title">Все еще сомневаетесь?</p>
+          <p class="promo-video__text">
+            Смотрите видеопрезентацию и скорее за билетами,
+            пока они не подорожали в очередной раз!
+          </p>
+
+          <div class="promo-video__player"></div>
         </section>
       </main>
 
