--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
     <title>HTML Academy: Седона. Форма обратной связи</title>
     <meta name="keywords" content="TODO seo">
     <meta name="description" content="TODO seo">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="form-page">
     <div class="container">
@@ -18,13 +19,15 @@
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
           </ul>
 
-          <button type="button" class="site-nav__toggler">
-            Открыть/Закрыть меню сайта
-          </button>
+          <div class="site-nav__panel">
+            <button class="site-nav__toggler" type="button">
+              Открыть/Закрыть меню сайта
+            </button>
 
-          <a class="site-logo" href="index.html">
-            <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
-          </a>
+            <a class="site-nav__logo">
+              <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
+            </a>
+          </div>
         </nav>
 
         <div class="site-banner-small">
@@ -45,8 +48,8 @@
           <a href="index.html">#visitSEDONA</a>
         </div>
 
-        <div class="page-footer__social-link  social-links">
-          <ul>
+        <div class="page-footer__social-link">
+          <ul class="social-links">
             <li class="social-links__item  social-links__item--twitter">
               <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
             </li>
@@ -54,14 +57,14 @@
               <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
             </li>
             <li class="social-links__item  social-links__item--youtube">
-              <a href="https://www.youtube.com/watch?v=HU22peKtyfY">Youtube</a>
+              <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
             </li>
           </ul>
         </div>
 
         <div class="page-footer__credits">
-          Разработано
-          <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <span class="page-footer__credits-text">Разработано</span>
+          <a class="page-footer__credits-link  htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
         </div>
       </footer>
     </div>
