--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <title>HTML Academy: Седона</title>
     <meta name="keywords" content="TODO seo">
     <meta name="description" content="TODO seo">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="index-page">
     <div class="container">
@@ -16,19 +17,30 @@
             <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
+
+            <!-- TODO удалить позже. тесть на переполнение -->
+            <!--            <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">-->
+            <!--              Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+            <!--              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--            </a></li>-->
+            <!--            <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">-->
+            <!--              111111111111111111111111111111111111111111111111111111111111-->
+            <!--            </a></li>-->
           </ul>
 
-          <button type="button" class="site-nav__toggler">
-            Открыть/Закрыть меню сайта
-          </button>
+          <div class="site-nav__panel">
+            <button class="site-nav__toggler" type="button">
+              Открыть/Закрыть меню сайта
+            </button>
 
-          <a class="site-logo">
-            <img src="https://via.placeholder.com/102x83" alt="City of SEDONA (LOGO)">
-          </a>
+            <a class="site-nav__logo">
+              <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
+            </a>
+          </div>
         </nav>
 
         <div class="site-banner-big">
-          <img src="https://via.placeholder.com/320x389"
+          <img src="./img/text-sedona-index.svg"
             class="site-banner-big__content"
             alt="Welcome to the gorgeous Sedona! Because the Grand Canyon Sucks">
         </div>
@@ -45,51 +57,53 @@
           </p>
         </section>
 
+        <div class="advantage-with-list">
+          <section class="advantage  advantage--primary">
+            <h2 class="advantage__title">Настоящий городок</h2>
+
+            <span class="advantage__number">№1</span>
+
+            <p class="advantage__desc">
+              Седона не аттракцион для туристов, там течет своя жизнь
+            </p>
+
+            <div class="advantage__photo">
+              <img src="./img/main-city-mobile@1x.jpg"
+                alt="На фото изображен сельский городок во все его сельском великолемии. Деревянные дома, флаги всех цветов и ни единой живой души..."
+              >
+            </div>
+          </section>
+        </div>
+
+        <div class="advantage__benefits  small-city-benefits">
+          <h3 class="visually-hidden">Преимущества посещения маленького городка</h3>
+
+          <ul class="small-city-benefits__list">
+            <li class="small-city-benefits__item  small-city-benefits__item--housing">
+              <b class="small-city-benefits__item-title">Жилье</b>
+              <p class="small-city-benefits__item-desc">
+                Рекомендуем пожить в настоящем мотеле, все как в кино!
+              </p>
+            </li>
+
+            <li class="small-city-benefits__item  small-city-benefits__item--souvenir">
+              <b class="small-city-benefits__item-title">Сувениры</b>
+              <p class="small-city-benefits__item-desc">
+                Не только китайского, но и местного производства!
+              </p>
+            </li>
+
+            <li class="small-city-benefits__item  small-city-benefits__item--food">
+              <b class="small-city-benefits__item-title">Еда</b>
+              <p class="small-city-benefits__item-desc">
+                Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+              </p>
+            </li>
+          </ul>
+        </div>
+
         <section class="advantage  advantage--primary">
-          <h2>Настоящий городок</h2>
-
-          <span class="advantage__number">№1</span>
-
-          <p class="advantage__desc">
-            Седона не аттракцион для туристов, там течет своя жизнь
-          </p>
-
-          <div class="advantage__photo">
-            <img src="https://via.placeholder.com/320x260"
-              alt="На фото изображен сельский городок во все его сельском великолемии. Деревянные дома, флаги всех цветов и ни единой живой души..."
-            >
-          </div>
-
-          <div class="advantage__benefits  small-city-benefits">
-            <h3 class="visually-hidden">Преимущества посещения маленького городка</h3>
-
-            <ul>
-              <li class="small-city-benefits__item  small-city-benefits__item--housing">
-                <b class="small-city-benefits__item-title">Жилье</b>
-                <p class="small-city-benefits__item-desc">
-                  Рекомендуем пожить в настоящем мотеле, все как в кино!
-                </p>
-              </li>
-
-              <li class="small-city-benefits__item  small-city-benefits__item--souvenir">
-                <b class="small-city-benefits__item-title">Сувениры</b>
-                <p class="small-city-benefits__item-desc">
-                  Не только китайского, но и местного производства!
-                </p>
-              </li>
-
-              <li class="small-city-benefits__item  small-city-benefits__item--food">
-                <b class="small-city-benefits__item-title">Еда</b>
-                <p class="small-city-benefits__item-desc">
-                  Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
-                </p>
-              </li>
-            </ul>
-          </div>
-        </section>
-
-        <section class="advantage  advantage--primary">
-          <h2>Там есть мост дьявола</h2>
+          <h2 class="advantage__title">Там есть мост дьявола</h2>
 
           <span class="advantage__number">№2</span>
 
@@ -98,14 +112,14 @@
           </p>
 
           <div class="advantage__photo">
-            <img src="https://via.placeholder.com/320x260"
+            <img src="./img/photo-bridge-mobile@1x.jpg"
               alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью"
             >
           </div>
         </section>
 
         <section class="advantage">
-          <h2>Небольшая площадь</h2>
+          <h2 class="advantage__title">Небольшая площадь</h2>
 
           <span class="advantage__number">№3</span>
 
@@ -115,7 +129,7 @@
         </section>
 
         <section class="advantage">
-          <h2>Красивая дорога</h2>
+          <h2 class="advantage__title">Красивая дорога</h2>
 
           <span class="advantage__number">№4</span>
 
@@ -125,7 +139,7 @@
         </section>
 
         <section class="advantage">
-          <h2>Мало туристов</h2>
+          <h2 class="advantage__title">Мало туристов</h2>
 
           <span class="advantage__number">№5</span>
 
@@ -144,21 +158,23 @@
           <a>#visitSEDONA</a>
         </div>
 
-        <ul class="page-footer__social-link  social-links">
-          <li class="social-links__item  social-links__item--twitter">
-            <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
-          </li>
-          <li class="social-links__item  social-links__item--facebook">
-            <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
-          </li>
-          <li class="social-links__item  social-links__item--youtube">
-            <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
-          </li>
-        </ul>
+        <div class="page-footer__social-link">
+          <ul class="social-links">
+            <li class="social-links__item  social-links__item--twitter">
+              <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
+            </li>
+            <li class="social-links__item  social-links__item--facebook">
+              <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
+            </li>
+            <li class="social-links__item  social-links__item--youtube">
+              <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
+            </li>
+          </ul>
+        </div>
 
         <div class="page-footer__credits">
-          Разработано
-          <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
+          <span class="page-footer__credits-text">Разработано</span>
+          <a class="page-footer__credits-link  htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
         </div>
       </footer>
     </div>
