--- a/source/photo.html
+++ b/source/photo.html
@@ -41,7 +41,7 @@
         <section class="gallery">
           <h1 class="gallery__title">Фото и видео</h1>
 
-          <p class="gallery_desc">
+          <p class="gallery__desc">
             Не можете решиться на путешествие из-за курса?
             Фотографии помогут вам забыть о политике и экономике.
           </p>
@@ -52,7 +52,7 @@
                 <img class="post__img" src="./img/photo-sunset-mobile@1x.jpg"
                   alt="Уходящая вдаль дорога, закат, зелень. Ты запомнишь этот момент на долго...">
 
-                <figcaption>
+                <figcaption class="post__footer">
                   <h2 class="post__title">Неродные просторы</h2>
                   <span class="post__author">Автор фото: Борис</span>
 
@@ -69,7 +69,7 @@
                 <img class="post__img" src="./img/photo-cactus-mobile@1x.jpg"
                   alt="Очень страшное растение покрытое смертоносными шипами, такое лучше никогда в жизни не свтречать">
 
-                <figcaption>
+                <figcaption class="post__footer">
                   <h2 class="post__title">Местная растительность</h2>
                   <span class="post__author">Автор фото: Сергей</span>
 
@@ -86,7 +86,7 @@
                 <img class="post__img" src="./img/photo-roads-mobile@1x.jpg"
                   alt="Перегнутая дорога, навевает мысли о сиянии">
 
-                <figcaption>
+                <figcaption class="post__footer">
                   <h2 class="post__title">Дорога на север</h2>
                   <span class="post__author">Автор фото: Петр</span>
 
@@ -103,7 +103,7 @@
                 <img class="post__img" src="./img/photo-bridge-mobile@1x.jpg"
                   alt="Огромные залежи камня волею высших сил сформировали подобие моста">
 
-                <figcaption>
+                <figcaption class="post__footer">
                   <h2 class="post__title">Мост дьявола</h2>
                   <span class="post__author">Автор фото: Антон</span>
 
@@ -123,8 +123,8 @@
           </h2>
           <p class="promo-video__title">Все еще сомневаетесь?</p>
           <p class="promo-video__text">
-            Смотрите видеопрезентацию и скорее за билетами,
-            пока они не подорожали в очередной раз!
+            Смотрите видеопрезентацию и&nbsp;скорее за&nbsp;билетами,
+            пока&nbsp;они не&nbsp;подорожали в&nbsp;очередной раз!
           </p>
 
           <div class="promo-video__player"></div>
