--- a/source/form.html
+++ b/source/form.html
@@ -14,20 +14,19 @@
         <nav class="site-nav  site-nav--open">
           <ul class="site-nav__list">
             <li class="site-nav__item"><a href="index.html">Главная</a></li>
-            <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-nav__item"><a>Форма Отзыва</a></li>
+            <li class="site-nav__item"><a>Фото и видео</a></li>
+            <li class="site-nav__item  site-nav__item--site-logo">
+              <a href="index.html">
+                <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
+              </a>
+            </li>
+            <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
           </ul>
 
-          <div class="site-nav__panel">
-            <button class="site-nav__toggler" type="button">
-              Открыть/Закрыть меню сайта
-            </button>
-
-            <a class="site-nav__logo">
-              <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
-            </a>
-          </div>
+          <button class="site-nav__toggler" type="button">
+            Открыть/Закрыть меню сайта
+          </button>
         </nav>
 
         <div class="site-banner-small">
@@ -46,13 +45,13 @@
           </p>
           <p class="form-page-intro__desc">
             Помогите нашим отелям стать лучше!
-            Оставьте отзыв о них, а также о посещенных вами достопримечательностях
+            Оставьте отзыв о них, а&nbsp;также о посещенных вами достопримечательностях
           </p>
         </div>
 
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="feedback-form__fieldset">
-            <legend class="feedback-form__fieldset-title">Представьтесь:</legend>
+          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--name">
+            <legend class="feedback-form__fieldset-title"><span>Представьтесь:</span></legend>
 
             <div class="text-input">
               <label for="feedback-form__first-name">
@@ -78,7 +77,7 @@
           </fieldset>
 
           <fieldset class="feedback-form__fieldset  feedback-form__fieldset--contacts">
-            <legend class="feedback-form__fieldset-title">Контактная информация:</legend>
+            <legend class="feedback-form__fieldset-title"><span>Контактная информация:</span></legend>
 
             <div class="text-input  text-input--phone">
               <label for="feedback-form__phone">
@@ -98,57 +97,61 @@
           </fieldset>
 
           <fieldset class="feedback-form__fieldset  feedback-form__fieldset--rating">
-            <legend class="feedback-form__fieldset-title">Ваше Общее впечатление:</legend>
+            <legend class="feedback-form__fieldset-title"><span>Ваше Общее впечатление:</span></legend>
 
-            <div class="radio-input">
-              <input type="radio" name="score" value="1" checked
-                id="feedback-form__score-1">
-              <label for="feedback-form__score-1">Скорее положительное</label>
-            </div>
+            <div class="radio-input-list">
+              <div class="radio-input">
+                <input type="radio" name="score" value="1" checked
+                  id="feedback-form__score-1">
+                <label for="feedback-form__score-1">Скорее положительное</label>
+              </div>
 
-            <div class="radio-input">
-              <input type="radio" name="score" value="2"
-                id="feedback-form__score-2">
-              <label for="feedback-form__score-2">Скорее отрицательное</label>
-            </div>
+              <div class="radio-input">
+                <input type="radio" name="score" value="2"
+                  id="feedback-form__score-2">
+                <label for="feedback-form__score-2">Скорее отрицательное</label>
+              </div>
 
-            <div class="radio-input">
-              <input type="radio" name="score" value="3"
-                id="feedback-form__score-3">
-              <label for="feedback-form__score-3">Затрудняюсь ответить</label>
+              <div class="radio-input">
+                <input type="radio" name="score" value="3"
+                  id="feedback-form__score-3">
+                <label for="feedback-form__score-3">Затрудняюсь ответить</label>
+              </div>
             </div>
           </fieldset>
 
           <fieldset class="feedback-form__fieldset  feedback-form__fieldset--places">
-            <legend class="feedback-form__fieldset-title">Посещенные достопримечательности:</legend>
+            <legend class="feedback-form__fieldset-title"><span>Посещенные достопримечательности:</span></legend>
 
-            <div class="checkbox-input">
-              <input type="checkbox" name="place" value="1" checked
-                id="feedback-form__place-1">
-              <label for="feedback-form__place-1">Мост Дьявола</label>
-            </div>
+            <div class="checkbox-input-list">
+              <div class="checkbox-input">
+                <input type="checkbox" name="place" value="1" checked
+                  id="feedback-form__place-1">
+                <label for="feedback-form__place-1">Мост Дьявола</label>
+              </div>
 
-            <div class="checkbox-input">
-              <input type="checkbox" name="place" value="2" checked
-                id="feedback-form__place-2">
-              <label for="feedback-form__place-2">Гора-Колокол</label>
-            </div>
+              <div class="checkbox-input">
+                <input type="checkbox" name="place" value="2" checked
+                  id="feedback-form__place-2">
+                <label for="feedback-form__place-2">Гора-Колокол</label>
+              </div>
 
-            <div class="checkbox-input">
-              <input type="checkbox" name="place" value="3" checked
-                id="feedback-form__place-3">
-              <label for="feedback-form__place-3">Слайд-парк</label>
-            </div>
+              <div class="checkbox-input">
+                <input type="checkbox" name="place" value="3" checked
+                  id="feedback-form__place-3">
+                <label for="feedback-form__place-3">Слайд-парк</label>
+              </div>
 
-            <div class="checkbox-input">
-              <input type="checkbox" name="place" value="4"
-                id="feedback-form__place-4">
-              <label for="feedback-form__place-4">Красные скалы</label>
+              <div class="checkbox-input">
+                <input type="checkbox" name="place" value="4"
+                  id="feedback-form__place-4">
+                <label for="feedback-form__place-4">Красные скалы</label>
+              </div>
             </div>
           </fieldset>
 
-          <fieldset class="feedback-form__fieldset">
-            <legend class="feedback-form__fieldset-title">Опишите свои эмоции:</legend>
+          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--review">
+            <legend class="feedback-form__fieldset-title"><span>Опишите свои эмоции:</span></legend>
 
             <label class="visually-hidden" for="feedback-form__review">Отзыв</label>
             <textarea class="feedback-form__review" name="review"
@@ -157,6 +160,10 @@
 
           <fieldset class="feedback-form__fieldset  feedback-form__fieldset--submit">
             <button class="button  feedback-form__submit-button" type="submit">Отправить отзыв</button>
+
+            <div class="feedback-form__required-field-help">
+              * — обязательные поля
+            </div>
           </fieldset>
         </form>
       </main>
