--- a/source/photo.html
+++ b/source/photo.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
     <title>HTML Academy: Седона. Фото и видео</title>
-    <meta name="keywords" content="TODO seo">
-    <meta name="description" content="TODO seo">
+    <meta name="keywords" content="[SEO]">
+    <meta name="description" content="[SEO]">
     <link rel="stylesheet" href="css/style.css">
 
     <script>
@@ -27,7 +27,7 @@
                   <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
                   <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
                   <img src="./img/logo-sedona-mobile.svg"
-                    sizes="(min-width: 1200px) 188px, 102px"
+                    width="102"
                     alt="City of SEDONA (LOGO)">
                 </picture>
               </a>
@@ -200,7 +200,7 @@
 
         <section class="promo-video">
           <h2 class="visually-hidden">
-            (TODO SEO) Сенсационное видео про Седону, котиков и лучшие бургеры в мире! Бесплатно.
+            [SEO] Сенсационное видео про Седону, котиков и лучшие бургеры в мире! Бесплатно.
           </h2>
           <p class="promo-video__title">Все еще сомневаетесь?</p>
           <p class="promo-video__text">
@@ -262,32 +262,27 @@
           <a>#visitSEDONA</a>
         </div>
 
-        <div class="page-footer__social-link">
-          <ul class="social-links">
-            <li class="social-links__item  social-links__item--twitter">
-              <a href="https://twitter.com/hashtag/sedona" target="_blank" aria-label="Twitter">
-                <svg width="19" height="15">
-                  <use xlink:href='./img/sprite.svg#icon-twitter'/>
-                </svg>
-              </a>
-            </li>
+        <div class="page-footer__social-link  social-links">
+          <a class="social-links__item"
+            href="https://twitter.com/hashtag/sedona" target="_blank" aria-label="Twitter">
+            <svg width="19" height="15">
+              <use xlink:href='./img/sprite.svg#icon-twitter'/>
+            </svg>
+          </a>
 
-            <li class="social-links__item  social-links__item--facebook">
-              <a href="https://www.facebook.com/VisitSedona/" target="_blank" aria-label="Facebook">
-                <svg width="9" height="19">
-                  <use xlink:href='./img/sprite.svg#icon-facebook'/>
-                </svg>
-              </a>
-            </li>
+          <a class="social-links__item  social-links__item--facebook"
+            href="https://www.facebook.com/VisitSedona/" target="_blank" aria-label="Facebook">
+            <svg width="9" height="19">
+              <use xlink:href='./img/sprite.svg#icon-facebook'/>
+            </svg>
+          </a>
 
-            <li class="social-links__item  social-links__item--youtube">
-              <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
-                <svg width="20" height="14">
-                  <use xlink:href='./img/sprite.svg#icon-youtube'/>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <a class="social-links__item"
+            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
+            <svg width="20" height="14">
+              <use xlink:href='./img/sprite.svg#icon-youtube'/>
+            </svg>
+          </a>
         </div>
 
         <div class="page-footer__credits">
@@ -303,6 +298,9 @@
         </div>
       </footer>
     </div>
+
+    <script src="./js/svg4everybody.min.js"></script>
+    <script>svg4everybody();</script>
 
     <script src="js/app.js"></script>
   </body>
